[gd_scene load_steps=9 format=3 uid="uid://bl8foc6eavskr"]

[ext_resource type="Texture2D" uid="uid://nfjubx7qaxyq" path="res://Sprites/Player_SpriteSheet.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(30, 20)

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 0.3
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.2, 0.3)
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="Animation" id="4"]
resource_name = "TurnLeft"
length = 0.3
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3)
}

[sub_resource type="Animation" id="5"]
resource_name = "TurnRight"
length = 0.3
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnjpr"]
_data = {
"Idle": SubResource("2"),
"RESET": SubResource("3"),
"TurnLeft": SubResource("4"),
"TurnRight": SubResource("5")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")
hframes = 2
vframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xnjpr")
}

[node name="LeftCannon" type="Marker2D" parent="."]
position = Vector2(-11, -11)

[node name="RightCannon" type="Marker2D" parent="."]
position = Vector2(11, -11)

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_timer_timeout"]
